--- a/plop-templates/component-test.hbs
+++ b/plop-templates/component-test.hbs
@@ -1,21 +1,21 @@
 // {{componentName}}.test.js
 
-import React from 'react';
-import { render, screen } from '@testing-library/react';
-import '@testing-library/jest-dom/extend-expect';
+import React from "react";
+import { render, screen } from "@testing-library/react";
+import "@testing-library/jest-dom/extend-expect";
 
 
-import { Primary } from './{{componentName}}.stories';
+import { Primary } from "./{{componentName}}.stories";
 
-it('renders the {{lowerCase componentName}} in the primary state', () => {
+it("renders the {{lowerCase componentName}} in the primary state", () => {
   render(<Primary {...Primary.args} />);
-  expect(screen.getByRole('button')).toHaveTextContent('Primary');
+  expect(screen.getByRole("")).toHaveTextContent("Primary");
 });
 
 it("fires a provided onClick handler", () => {
     let onClick = jest.fn();
     render(<Primary {...Primary.args} onClick={onClick} />);
 
-    userEvent.click(screen.getByRole("button"));
+    userEvent.click(screen.getByRole(""));
     expect(onClick).toHaveBeenCalled();
 });
