changes icon usage to remove reliance on react-svg
- converts icons to react components (embedded svg)

--- a/src/components/Icon/Icon.scss
+++ b/src/components/Icon/Icon.scss
@@ -1,11 +1,14 @@
 @import "../../styles/Variables.scss";
 
 .mainsail-icon {
-    &span,
-    span {
-        color: inherit;
-        display: flex;
-        align-content: center;
+    color: inherit;
+    display: flex;
+    align-items: center;
+    align-content: center;
+
+    svg {
+        vertical-align: middle;
+        align-self: center;
     }
 
     &.sm {
