--- a/plop-templates/component.hbs
+++ b/plop-templates/component.hbs
@@ -4,6 +4,10 @@ import clsx from "clsx";
 
 import "./{{componentName}}.scss";
 
+export const ENUMS = {
+    // Add any prop enums here (see Button.js for example)
+};
+
 /**
  * {{componentDescription}}
  **/
