--- a/src/components/Icon/Icon.scss
+++ b/src/components/Icon/Icon.scss
@@ -2,7 +2,7 @@
 
 .mainsail-icon {
     color: inherit;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     align-content: center;
 
