--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -26,6 +26,7 @@
 
 .spinner > div {
     flex-shrink: 0;
+    flex-grow: 0;
     width: 8px;
     height: 8px;
     background-color: currentColor;
