--- a/plop-templates/component-stories.hbs
+++ b/plop-templates/component-stories.hbs
@@ -3,7 +3,7 @@ import React from "react";
 import { {{componentName}} } from "./{{componentName}}";
 
 export default {
-    title: "Mainsail UI/{{componentName}}",
+    title: "{{category}}/{{componentName}}",
     component: {{componentName}},
     argTypes: {
     },
