--- a/src/components/Icon/Icon.scss
+++ b/src/components/Icon/Icon.scss
@@ -46,6 +46,7 @@
     &.disabled {
         opacity: 0.3;
         user-select: none;
+        pointer-events: none;
     }
 
     @include icon-colors();
