--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -17,9 +17,9 @@ $mainsail-orange-light: #fff6f1;
 $mainsail-orange-middle: #ff5900;
 $mainsail-orange-dark: #b93e00;
 
-$mainsail-red-light: #fff1f6;
-$mainsail-red-middle: #ff0056;
-$mainsail-red-dark: #ba003c;
+$mainsail-pink-light: #fff1f6;
+$mainsail-pink-middle: #ff0056;
+$mainsail-pink-dark: #ba003c;
 
 $mainsail-neutral-1: #2d3e4c;
 $mainsail-neutral-2: #526270;
@@ -27,6 +27,10 @@ $mainsail-neutral-3: #93a5b4;
 $mainsail-neutral-4: #c2cfda;
 $mainsail-neutral-5: #e2eaf0;
 $mainsail-neutral-6: #f4f8fa;
+
+$mainsail-red-light: #ffe7e7;
+$mainsail-red-middle: #c91010;
+$mainsail-red-dark: #7c0000;
 
 $mainsail-white: #ffffff;
 
