--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -15,6 +15,18 @@ $mainsail-shadow-far: 0px 2px 32px -12px rgba(0, 52, 98, 0.25);
 $mainsail-shadow-near: 0px 2px 8px -2px rgba(0, 52, 98, 0.3);
 $mainsail-shadow-active: 0px 0px 2px 1px rgba(0, 111, 186, 0.5);
 
+@mixin mainsail-shadow-active($color) {
+    box-shadow: 0px 0px 2px 1px rgba($color, 0.5);
+}
+
+@mixin mainsail-shadow-near($color) {
+    box-shadow: 0px 2px 8px -2px rgba($color, 0.3);
+}
+
+@mixin mainsail-shadow-far($color) {
+    box-shadow: 0px 2px 32px -12px rgba($color, 0.25);
+}
+
 // Tab Styling
 @mixin mainsail-tab-text($font-weight) {
     font-family: $mainsail-font;
