changes naming of intent value
- switches from destructive to danger since that is more commonly used

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -73,7 +73,7 @@ button.mainsail-button {
             }
         }
 
-        &.destructive {
+        &.danger {
             background: $mainsail-red-middle;
             color: $mainsail-blue-light;
             border-color: $mainsail-red-middle;
@@ -121,7 +121,7 @@ button.mainsail-button {
             }
         }
 
-        &.destructive {
+        &.danger {
             background: $mainsail-white;
             color: $mainsail-red-middle;
             border-color: $mainsail-red-middle;
@@ -167,7 +167,7 @@ button.mainsail-button {
             }
         }
 
-        &.destructive {
+        &.danger {
             background: $mainsail-white;
             color: $mainsail-red-middle;
             border-color: $mainsail-red-middle;
@@ -217,7 +217,7 @@ button.mainsail-button {
             }
         }
 
-        &.destructive {
+        &.danger {
             background: $mainsail-white;
             color: $mainsail-red-middle;
             border-color: $mainsail-red-middle;
