fixes loading state not disabling button

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -259,4 +259,13 @@ button.mainsail-button {
     &.full-width {
         width: 100%;
     }
+
+    &.loading {
+        &:disabled {
+            opacity: 1;
+        }
+        &.disabled {
+            opacity: 0.3;
+        }
+    }
 }
