improvements to sass for css only usage

--- a/src/components/core/index.scss
+++ b/src/components/core/index.scss
@@ -1,4 +1,9 @@
+@import "../../styles/Reset.scss";
+@import "../../styles/Layout.scss";
 @import "../../styles/Variables.scss";
+@import "../../styles/Utility.scss";
+@import "../../styles/Colors.scss";
+@import "../../styles/Text.scss";
 
 // SASS Global Import for plopjs
 @import "../Button/Button.scss";
