--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -41,6 +41,7 @@ $mainsail-white: #ffffff;
 
 $blue: (
     light: $mainsail-blue-light,
+    primary: $mainsail-blue-primary,
     middle: $mainsail-blue-middle,
     dark: $mainsail-blue-dark,
 );
