--- a/src/styles/Text.scss
+++ b/src/styles/Text.scss
@@ -1,3 +1,75 @@
 @import "./Colors.scss";
+@import "./Utility.scss";
 
 $font: "Roboto", Helvetica, Arial, sans-serif;
+
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4 {
+    color: $mainsail-neutral-1;
+    font-family: $font;
+    font-weight: 500;
+    font-style: normal;
+    margin-bottom: 30px;
+}
+h1,
+.h1 {
+    font-weight: bold;
+    font-size: 42px;
+    line-height: 49px;
+}
+h2,
+.h2 {
+    font-size: 24px;
+    line-height: 28px;
+}
+h3,
+.h3 {
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 21px;
+}
+h4,
+.h4 {
+    font-size: 14px;
+    line-height: 18px;
+}
+
+.hero-text {
+    font-family: $font;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 42px;
+    line-height: 49px;
+    color: $mainsail-neutral-1;
+    margin-bottom: 0px;
+}
+
+p,
+.body-text {
+    font-family: $font;
+    font-style: normal;
+    font-weight: normal;
+    color: $mainsail-neutral-1;
+    &,
+    .md {
+        @include mainsail-body-text-regular();
+    }
+
+    &.lg {
+        @include mainsail-body-text-large();
+    }
+
+    &.sm {
+        @include mainsail-body-text-small();
+    }
+
+    &.xs {
+        @include mainsail-body-text-tiny();
+    }
+}
