initial badges work

--- a/plop-templates/component.hbs
+++ b/plop-templates/component.hbs
@@ -5,7 +5,7 @@ import clsx from "clsx";
 import "./{{componentName}}.scss";
 
 export const ENUMS = {
-    // Add any prop enums here (see Button.js for example)
+    // Add any prop enums here (see Icon.js for example)
 };
 
 /**
