simplifies color/variant handling for badge

--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -70,6 +70,12 @@ $red: (
     dark: $mainsail-red-dark,
 );
 
+$pink: (
+    light: $mainsail-pink-light,
+    middle: $mainsail-pink-middle,
+    dark: $mainsail-pink-dark,
+);
+
 $neutral: (
     1: $mainsail-neutral-1,
     2: $mainsail-neutral-2,
