--- a/src/components/Badge/Badge.scss
+++ b/src/components/Badge/Badge.scss
@@ -6,20 +6,28 @@
     align-items: center;
     font-family: $font;
     font-size: 0.75em;
-    padding: 2px 12px;
+    padding: 4px;
     border-radius: 9999px;
 
     &.sm {
-        font-size: 10px;
-        padding: 2px 8px;
-    }
-    &.md {
-        font-size: 12px;
-        padding: 2px 9px;
+        @include mainsail-body-text-small();
+        font-weight: 700;
+        padding: 5px 7px;
+
+        svg {
+            height: 12px;
+            width: 12px;
+        }
     }
     &.lg {
-        font-size: 16px;
-        padding: 2px 10px;
+        @include mainsail-body-text-regular();
+        font-weight: 700;
+        padding: 5px 9px;
+
+        svg {
+            height: 14px;
+            width: 14px;
+        }
     }
 
     button {
@@ -29,34 +37,16 @@
         align-items: center;
         cursor: pointer;
         margin-left: 2px;
-        padding: 4px;
+        padding: 2px 3px;
     }
 
     &.removable {
         &.sm {
-            padding-right: 2px;
-            // svg {
-            //     width: 12px;
-            //     height: 12px;
-            // }
-        }
-        &.md {
-            padding-right: 2px;
+            padding-right: 3px;
+            padding-left: 8px;
         }
         &.lg {
             padding-right: 4px;
-        }
-    }
-
-    &.icon {
-        &.sm {
-            padding: 2px;
-        }
-        &.md {
-            padding: 3px;
-        }
-        &.lg {
-            padding: 4px;
         }
     }
 
@@ -82,5 +72,13 @@
             }
             border-radius: $mainsail-button-border-radius-lg;
         }
+    }
+
+    .bg {
+        @include color-modifiers();
+    }
+
+    .text {
+        @include color-modifiers($attribute: "color");
     }
 }
