--- a/src/components/Badge/Badge.scss
+++ b/src/components/Badge/Badge.scss
@@ -33,36 +33,64 @@
     &.blue {
         background-color: $mainsail-blue-light;
         color: $mainsail-blue-middle;
+
+        svg {
+            color: $mainsail-blue-middle;
+        }
     }
 
     &.green {
         background-color: $mainsail-green-light;
         color: $mainsail-green-middle;
+
+        svg {
+            color: $mainsail-green-middle;
+        }
     }
 
     &.violet {
         background-color: $mainsail-violet-light;
         color: $mainsail-violet-middle;
+
+        svg {
+            color: $mainsail-violet-middle;
+        }
     }
 
     &.orange {
         background-color: $mainsail-orange-light;
         color: $mainsail-orange-middle;
+
+        svg {
+            color: $mainsail-orange-middle;
+        }
     }
 
     &.pink {
         background-color: $mainsail-pink-light;
         color: $mainsail-pink-middle;
+
+        svg {
+            color: $mainsail-pink-middle;
+        }
     }
 
     &.red {
         background-color: $mainsail-red-light;
         color: $mainsail-red-middle;
+
+        svg {
+            color: $mainsail-red-middle;
+        }
     }
 
     &.neutral {
         background-color: $mainsail-neutral-5;
         color: $mainsail-neutral-2;
+
+        svg {
+            color: $mainsail-neutral-2;
+        }
     }
 
     button {
