--- a/plop-templates/component-test.hbs
+++ b/plop-templates/component-test.hbs
@@ -2,6 +2,7 @@
 
 import React from "react";
 import { render, screen } from "@testing-library/react";
+import userEvent from "@testing-library/user-event";
 import "@testing-library/jest-dom/extend-expect";
 
 
